@@ -1,10 +1,14 @@
 partman-auto (76) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Support preseeding partman-auto/choose_recipe using the name of the
     recipe you want (e.g. "home"), as an alternative to the localised
     description.
 
- -- Colin Watson <cjwatson@debian.org>  Fri, 29 Feb 2008 11:47:28 +0000
+  [ Guido Guenther ]
+  * Allow multipathed devices as auto_disks
+
+ -- Guido Guenther <agx@sigxcpu.org>  Sat, 01 Mar 2008 17:49:52 +0100
 
 partman-auto (75) unstable; urgency=low
 
